# Agentic-Data-Analyst

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  streamlit_app.py
app/: __init__.py  main.py
app/api/: dependencies.py  router.py
app/api/routers/: chat.py  files.py  upload.py  users.py  voice_chat.py
app/core/: config.py  errors.py  logging.py
app/schemas/: chat.py  upload.py  user.py  voice.py
app/services/: agent_factory.py  config_loader.py  streaming.py  stt_service.py  tool_registry.py  tools.py  user_provisioning.py
app/utils/: files.py  hashing.py  url_signing.py
examples/: marketing_leads.csv  retail_sales.csv  support_tickets.csv
frontend/: __init__.py  api_client.py  config.py  renderers.py  state.py
templates/data_analyst_agent/config_files/: main_config.yaml  subagents_config.yaml
templates/data_analyst_agent/prompts/: main_prompt.md  prompt_data_quality.md  prompt_segmentation.md  prompt_visualization.md
templates/data_analyst_agent/workspace_seed/: AGENTS.md
templates/geology_agent/config_files/: main_config.yaml  subagents_config.yaml
templates/geology_agent/prompts/: main_prompt.md  prompt_compositacion.md  prompt_nearest_neighbor_assignment.md
